--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
 	"name": "portfolio",
 	"version": "0.1.0",
 	"private": true,
-	"homepage": "https://AzureAbalone.github.io/web-cuoi-ky",
 	"dependencies": {
 		"@testing-library/jest-dom": "^5.17.0",
 		"@testing-library/react": "^13.4.0",
@@ -10,7 +9,6 @@
 		"@vercel/speed-insights": "^1.0.10",
 		"aos": "^2.3.4",
 		"firebase": "^10.9.0",
-		"gh-pages": "^6.1.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-scripts": "^5.0.1",
@@ -20,9 +18,7 @@
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
-		"eject": "react-scripts eject",
-		"predeploy": "npm run build",
-		"deploy": "gh-pages -d build"
+		"eject": "react-scripts eject"
 	},
 	"eslintConfig": {
 		"extends": [
